add: change dev container settings

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,9 @@
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/duduribeiro/devcontainer-features/tmux:1": {},
 		"ghcr.io/meaningful-ooo/devcontainer-features/fish:2": {}
+	},
+	"containerEnv": {
+    	"TZ": "Asia/Tokyo"
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
